# PureR

./: LICENSE  README.md  flake.nix  purer.cabal
.github/workflows/: CI.yaml
app/: Main.hs
nix/: overlay.nix
src/PureR/: Convert.hs  Expr.hs  Identifiers.hs  Main.hs  Prelude.hs  Print.hs
