cabal-version:   2.4
name:            purer
version:         1.0
license:         BSD-3-Clause
build-type:      Simple
license-file:    LICENSE
-- category:
-- description:     description
synopsis:        R backend for PureScript.  Transpile PureScript code to R.
maintainer:      Justin Bedo <cu@cua0.org>
homepage:        https://github.com/jbedo/purer
tested-with:     GHC ==8.10.4
extra-doc-files:
  CHANGELOG.md
  README.md

source-repository head
  type:     git
  location: git://github.com/jbedo/purer

common common-options
  build-depends:    base >=4.9 && <5
  default-language: Haskell2010
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints
    -fhide-source-paths -Wpartial-fields

library
  import:          common-options
  hs-source-dirs:  src
  exposed-modules:
    PureR.Convert
    PureR.Expr
    PureR.Identifiers
    PureR.Main
    PureR.Prelude
    PureR.Print

  build-depends:
    , aeson
    , bytestring
    , containers
    , directory
    , filepath
    , microlens-platform
    , mtl
    , pretty-simple
    , purescript          >= 0.14.4 && < 0.15
    , purescript-cst
    , text

executable purer
  import:         common-options
  hs-source-dirs: app
  main-is:        Main.hs
  build-depends:  purer
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
